--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -1,2 +1,5 @@
 $color-black: rgb(0, 0, 0);
 $color-red: rgb(150, 0, 0);
+$color-red-op: rgba(150, 0, 0, 0.574);
+$color-white: rgb(255, 255, 255);
+$color-primary: rgb(20, 20, 20);
