--- a/src/style/partials/_variables.scss
+++ b/src/style/partials/_variables.scss
@@ -1,4 +1,5 @@
 $color-black: rgb(0, 0, 0);
+$color-black-op: rgba(0, 0, 0, 0.452);
 $color-red: rgb(150, 0, 0);
 $color-red-op: rgba(150, 0, 0, 0.574);
 $color-white: rgb(255, 255, 255);
